--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>libsodium.js web worker entropy</title>
   </head>
   <body>
-    <div id="result"></div>
-    <script src="sodium.js"></script>
+    <div id="result">result</div>
     <script src="main.js"></script>
   </body>
 </html>
